--- a/app/src/main/res/layout/activity_standard_calculator.xml
+++ b/app/src/main/res/layout/activity_standard_calculator.xml
@@ -38,7 +38,7 @@
         android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/button0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/calculator" />
 
     <Button
         android:id="@+id/buttonDiv"
@@ -188,7 +188,7 @@
         app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/calculator"
         android:layout_width="75dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
@@ -224,7 +224,7 @@
         android:text="1"
         android:textColor="@android:color/background_light"
         android:textSize="30sp"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintEnd_toStartOf="@+id/calculator"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button4" />
 
